--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^2.0.1",
+    "hamburgers": "^1.1.3",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-scroll": "^1.7.12"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
