--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Portfolio",
-  "name": "Elmer's Portfolio",
+  "name": "Elmers_Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
